--- a/assests/style.css
+++ b/assests/style.css
@@ -2,9 +2,10 @@ body {
     display: flex;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(255, 0, 0);
+    color: rgb(4, 230, 247);
     justify-content: center;
     align-items: center;
+    background-color: black;
 }
 
 h1 {
@@ -16,7 +17,7 @@ h1 {
 .r {
     width: 100%;
     height: 500px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(190, 204, 1);
     display: flex;
     align-items: center;
 }
